# xun

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: base.Dockerfile  xun.Dockerfile
src/xun/: agent.py  config.py  context.py  conversation.py  display.py  display_abstract.py  entrypoint.py  error_catch.py  sandbox.py  tempdir.py  toolbox.py  util.py
src/xun/tools/: agent_factory.py  browser.py  cmd.py  fs.py  system.py
test/: test_context_var.py  test_conversation.py
