[project]
name = "xun"
version = "0.1.0"
description = "An autonomous mini LLM agent with file, command, search, browser, and sub-agent tooling."
readme = "README.md"
authors = [
    { name = "limengxun", email = "limengxun45@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.4",
    "html-to-markdown>=3.3.2",
    "json-repair>=0.59.5",
    "openai>=2.32.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typing-extensions>=4.15.0",
]

[project.scripts]
xun = "xun:main"
xun-box = "xun.sandbox:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
